package com.kenzie.appserver;

import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.scheduling.annotation.Scheduled;
import org.springframework.stereotype.Component;
import com.kenzie.ata.ExcludeFromJacocoGeneratedReport;

@ExcludeFromJacocoGeneratedReport
@Component
public class Scheduler {

    // Create any asynchronous services

//    @Autowired
//    private AsynchronousService checkAsyncService;
//
//    @Scheduled(fixedDelay = 200)
//    public void schedule() {
//        checkAsyncService.executeAsynchronously();
//    }

}
